# C-at-Improved

./: README.md  frontend-smoke-check.mjs
docs/: DEVELOPMENT.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: build.rs  compiler.rs  filesystem.rs  git.rs  mod.rs  packages.rs  projects.rs  system.rs  terminal.rs  window.rs
src-tauri/src/models/: types.rs
src-tauri/src/services/: build_service.rs  compiler_service.rs  file_service.rs  git_service.rs  mod.rs  monitor_service.rs  package_service.rs  terminal_service.rs
src-tauri/src/utils/: path_validator.rs
