[package]
name = "cat-editor"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "cat-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "time"] }
sysinfo = "0.30.13"
walkdir = "2.4"
tempfile = "3.8"
which = "5.0"
regex = "1.10"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

trash = "3.3"
futures = "0.3"
mime_guess = "2.0"

[dependencies.encoding_rs]
version = "0.8"
features = ["alloc"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.tauri]
opt-level = "s"
strip = true

[profile.release.package.serde]
opt-level = "s"

[profile.release.package.tokio]
opt-level = 3

[profile.release.package.regex]
opt-level = "s" 

[profile.release.package.walkdir]
opt-level = "s"

[profile.release.package.sysinfo]
opt-level = "s"

[profile.release.package.chrono]
opt-level = "s"

[profile.release.package.encoding_rs]
opt-level = "s"

[profile.release.package.trash]
opt-level = "s"

[profile.release.package.mime_guess]
opt-level = "s"

[profile.release.package.tracing]
opt-level = 3

[profile.release.package.futures]
opt-level = 3
